Feedback from coauthors throughout

--- a/data/references_ms.bib
+++ b/data/references_ms.bib
@@ -337,3 +337,35 @@
 }
 
 
+
+@article{Fick-2017,
+  title = {{{WorldClim}} 2: New 1-Km Spatial Resolution Climate Surfaces for Global Land Areas},
+  shorttitle = {{{WorldClim}} 2},
+  author = {Fick, Stephen E. and Hijmans, Robert J.},
+  year = {2017},
+  volume = {37},
+  pages = {4302--4315},
+  doi = {10.1002/joc.5086},
+  annotation = {\_eprint: https://rmets.onlinelibrary.wiley.com/doi/pdf/10.1002/joc.5086},
+  journal = {International Journal of Climatology}
+}
+
+
+@article{Kissling_2018,
+  title = {Towards Global Data Products of {{Essential Biodiversity Variables}} on Species Traits},
+  author = {Kissling, W. Daniel and Walls, Ramona and Bowser, Anne and Jones, Matthew O. and Kattge, Jens and Agosti, Donat and Amengual, Josep and Basset, Alberto and van Bodegom, Peter M. and Cornelissen, Johannes H. C. and Denny, Ellen G. and Deudero, Salud and Egloff, Willi and Elmendorf, Sarah C. and Garc{\'i}a, Enrique Alonso and Jones, Katherine D. and Jones, Owen R. and Lavorel, Sandra and Lear, Dan and Navarro, Laetitia M. and Pawar, Samraat and Pirzl, Rebecca and R{\"u}ger, Nadja and Sal, Sofia and {Salguero-G{\'o}mez}, Roberto and Schigel, Dmitry and Schulz, Katja-Sabine and Skidmore, Andrew and Guralnick, Robert P.},
+  year = {2018},
+  pages = {1},
+  doi = {10.1038/s41559-018-0667-3},
+  journal = {Nature Ecology \& Evolution}
+}
+
+
+
+@Manual{Stefan-2020,
+    title = {plotbiomes: Plot Whittaker biomes with ggplot2},
+    author = {Valentin Stefan and Sam Levin},
+    year = {2020},
+    note = {R package version 0.0.0.9001},
+  }
+
